Fixed Resume Display Overflow Functionality

--- a/src/index.css
+++ b/src/index.css
@@ -110,8 +110,8 @@
 .resume-container {
   display: flex;
   flex-direction: column;
-  max-width: 820px; 
-  max-height: 1056px;
+  width: 820px; 
+  height: 1056px;
   margin: 0px auto; 
   overflow: auto;
   padding: 10px; 
